
v4.0.0 2025-01-??
     * Describe new versioning policy, only publish packages of even patch
       numbers, odd patch numbers indicate development releases. We should have
       CI which guards against odd version numbers in the main branch.
     * Plugins needs updating (include paths, and add usage of
       registerPluginTestFunction). NCRYSTAL_PLUGIN_RUNTESTS=1 and
       NCRYSTAL_PLUGIN_RUNTESTS (fixme). NB: NCRYSTAL_PLUGIN_LIST now accepts
       .SODYLIB as cross-platform alias for .so/.dylib/.dll
       Describe new template and auto-detection after pip install plugin.
       Also describe NCRYSTAL_STDPLUGINSONLY=1.
     * Removed several long-obsolete CMake options. Also removed any options
       related to python code, since those are now installed without cmake.
     * Removed SOVERSION from produced libraries (due to github issue #186).
     * FactImpl::registerFactory function will now always raise an error
       in case of name clashes with an existing registed factory.
     * fixme: PluginBoilerplate header moved, have cmake generate
       redirection header for now?
     * TODO: Header locations changed, except for ncapi.h, ncrystal.h and
       NCrystal.hh. New headers are in subdirs indication their location in
       internal NCrystal coding units ("core", "utils", ...)
     * FIXME: Warn that anyone doing manual builds of NCrystal should read
       INSTALL again, as it has been completely rewritten to reflect the new infrastructure.
     * TODO: Support C++20 compilation
     * TODO: Rename _mmc.py to mmc.py! And add docstrings.
     * TODO: Rename PCBragg to PowderBragg!
     * Redesign the SmallVector class to be never implicitly copyable and
       instead introduce SmallVector_IC which is. This is needed for MS
       VisualStudio support. Also make resize methods unavailable for
       non-noexcept copy types.
     * Redesign the Optional class to support VisualStudio compilation.