@@ -574,43 +574,6 @@ if (NOT ALWAYS_HAS_MATH)
   endif()
 endif()
 
-#Embed requested external plugins directly into NCrystal:
-function(parse_pluginentry entry)
-  #Local entries are simply paths, while remote urls always contain at least one
-  #semicolon and might look like:
-  #
-  # https://github.com/mctools/ncplugin-MyPlugin.git::develop <- repo url + '::' + git ref
-  # https://github.com/mctools/ncplugin-MyPlugin.git          <- repo url (defaults to git ref 'main')
-  # mctools:MyPlugin[::gitref]                                <- same in condensed form (no '/', a single ':')
-  if(NOT entry MATCHES ":")
-    set(pluginentry_islocal ON PARENT_SCOPE)
-    return()
-  endif()
-  set(pluginentry_islocal OFF PARENT_SCOPE)
-  string(REPLACE "::" ";" parts "${entry}")
-  list(LENGTH parts nparts)
-  if (nparts EQUAL 1)
-    list(APPEND parts main)#default git ref tag
-  elseif(NOT nparts EQUAL 2)
-    message( FATAL_ERROR "Invalid syntax of entry in NCRYSTAL_BUILTIN_PLUGINS: ${entry}" )
-  endif()
-  list(GET parts 0 remoteurl)
-  list(GET parts 1 remoteref)
-  #condensed form has no slashes and a single ':'
-  if(NOT remoteurl MATCHES "/")
-    #condensed form has no slashes and a single ':'
-    string(REPLACE ":" ";" urlparts "${remoteurl}")
-    list(LENGTH urlparts nurlparts)
-    if (nurlparts EQUAL 2)
-      list(GET urlparts 0 remoteaccount)
-      list(GET urlparts 1 remotereponameending)
-      set(remoteurl "https://github.com/${remoteaccount}/ncplugin-${remotereponameending}.git")
-    endif()
-  endif()
-  set(pluginentry_remoteurl ${remoteurl} PARENT_SCOPE)
-  set(pluginentry_remoteref ${remoteref} PARENT_SCOPE)
-endfunction()
-
 if ( NCRYSTAL_ENABLE_DATA STREQUAL "EMBED" )
   #Embed data (needs to invoke python process to generate C++ code from .ncmat files)
 
@@ -789,104 +752,6 @@ if ( NCRYSTAL_GEANT4 )
   #Add G4NCrystal target in separate file:
   ncinstall( EXPORT G4NCrystalTargets FILE G4NCrystalTargets.cmake NAMESPACE NCrystal:: DESTINATION ${NCrystal_CMAKEDIR} )
   add_library(NCrystal::G4NCrystal ALIAS G4NCrystal)#always alias namespaces locally
-endif()
-
-set(all_plugin_names_lc "stdscat;stdabs;stdncmat")
-set(NCrystal_builtin_plugin_names "")
-set(ncrystal_iplugin 0)
-foreach(pluginentry ${NCRYSTAL_BUILTIN_PLUGINS})
-  #Fixme stop supporting this mode.
-  message( STATUS "Trying to add plugin: ${pluginentry}")
-  parse_pluginentry("${pluginentry}")
-  if (NOT pluginentry_islocal)
-    #need unique id when using FetchContent:
-    math(EXPR ncrystal_iplugin "${ncrystal_iplugin}+1")
-    string(MD5 pluginid "${pluginentry}")
-    set(pluginid "pl${pluginid}_${ncrystal_iplugin}")
-    if (NOT COMMAND FetchContent_Declare)
-      include(FetchContent)
-    endif()
-    message( STATUS "-- Trying to install plugin via remote git repo: ${pluginentry_remoteurl} (gitref ${pluginentry_remoteref})")
-    FetchContent_Declare( ${pluginid}
-      GIT_REPOSITORY "${pluginentry_remoteurl}"
-      GIT_TAG        "${pluginentry_remoteref}"
-      GIT_SHALLOW ON
-      )
-    FetchContent_GetProperties(${pluginid})
-    if(NOT ${pluginid}_POPULATED)
-      FetchContent_Populate(${pluginid})
-      set(pluginlocalsrcdir "${${pluginid}_SOURCE_DIR}")
-      message(STATUS "-- Fetched sources to ${pluginlocalsrcdir}")
-    endif()
-  else()
-    message(STATUS "-- Trying to install plugin via local path: ${pluginentry}")
-    if(NOT IS_ABSOLUTE ${pluginentry})
-      message(FATAL_ERROR "Local path in NCRYSTAL_BUILTIN_PLUGINS is not an absolute paths: ${pluginentry}")
-    endif()
-    set(pluginlocalsrcdir "${pluginentry}")
-  endif()
-  if(NOT EXISTS "${pluginlocalsrcdir}/ncplugin_name.txt" OR NOT EXISTS "${pluginlocalsrcdir}/CMakeLists.txt")
-    message(FATAL_ERROR "Entry in NCRYSTAL_BUILTIN_PLUGINS does not appear to contain proper sources (missing ncplugin_name.txt or CMakeLists.txt file): ${pluginentry}")
-  endif()
-  #Get plugin name from ncplugin_name.txt:
-  file(STRINGS "${pluginlocalsrcdir}/ncplugin_name.txt" NCPlugin_NAME LIMIT_COUNT 1)
-  string(STRIP "${NCPlugin_NAME}" NCPlugin_NAME)
-  #Check unique-ness of plugin name (at least the builtin ones):
-  string(TOLOWER "${NCPlugin_NAME}" NCPlugin_NAME_lowercase)
-  if (NCPlugin_NAME_lowercase IN_LIST all_plugin_names_lc)
-    message(FATAL_ERROR "Multiple plugins have the same name (must be unique and not clash with standard plugins): ${NCPlugin_NAME}.")
-  endif()
-  list(APPEND all_plugin_names_lc "${NCPlugin_NAME_lowercase}")
-  #Add subdirectory after setting a few variables needed by the plugin's
-  #CMakeLists.txt, and clearing a few ones we expect it to provide:
-  set(NCPLUGIN_DEVMODE OFF)
-  set(NCPLUGIN_ASBUILTIN ON)
-  unset(NCPLUGIN_SRCFILES)
-  unset(NCPLUGIN_DATAFILES)
-  unset(NCPLUGIN_COMPILEDEFS)
-  unset(NCPLUGIN_INCDIRS)
-  set(plugin_binary_dir "${PROJECT_BINARY_DIR}/ncplugins/${NCPlugin_NAME}")
-  add_subdirectory(${pluginlocalsrcdir} "${plugin_binary_dir}")
-  if (NOT NCPLUGIN_SRCFILES OR NOT NCPlugin_NAME)
-    message(FATAL_ERROR "Problem adding plugin (did not provide both NCPLUGIN_SRCFILES and NCPlugin_NAME variables): ${pluginentry}")
-  endif()
-  if (NCPLUGIN_COMPILEDEFS)
-    set_property(SOURCE ${NCPLUGIN_SRCFILES} APPEND PROPERTY COMPILE_DEFINITIONS ${NCPLUGIN_COMPILEDEFS})
-  endif()
-  if (NCPLUGIN_INCDIRS)
-    set_property(SOURCE ${NCPLUGIN_SRCFILES} APPEND PROPERTY INCLUDE_DIRECTORIES ${NCPLUGIN_INCDIRS})
-  endif()
-  if (NCPLUGIN_DATAFILES)
-    foreach(df ${NCPLUGIN_DATAFILES})
-      #Check that data file name follows convention: ncplugin-<pluginname>_*.ncmat
-      get_filename_component(dfbn "${df}" NAME)
-      if(NOT dfbn MATCHES "ncplugin-${NCPlugin_NAME}_.+\.ncmat")
-        message(FATAL_ERROR "Problem adding plugin: name of datafile ${dfbn} does not have required form: ncplugin-${NCPlugin_NAME}_*.ncmat")
-      endif()
-      list(APPEND DATAFILES "${df}")
-    endforeach()
-  endif()
-  list(APPEND NCrystal_builtin_plugin_names ${NCPlugin_NAME})
-  target_sources(NCrystal PRIVATE ${NCPLUGIN_SRCFILES})
-  message(STATUS "-- Configured plugin ${NCPlugin_NAME}")
-endforeach()
-if (NCrystal_builtin_plugin_names)
-  target_compile_definitions(NCrystal PRIVATE NCRYSTAL_HAS_BUILTIN_PLUGINS)
-  #Add generated .cc file which can load the plugins.
-  set(ncplugcc "${PROJECT_BINARY_DIR}/autogen_ncplugins.cc.in")
-  file(WRITE ${ncplugcc} "//Autogenerated file\n#include <iostream>\n#include \"NCrystal/NCPluginMgmt.hh\"\n")
-  foreach(NCPlugin_NAME ${NCrystal_builtin_plugin_names})
-    file(APPEND ${ncplugcc} "namespace NCrystalPlugin_${NCPlugin_NAME} { void registerPlugin(); }\n")
-  endforeach()
-  file(APPEND ${ncplugcc} "namespace NCRYSTAL_NAMESPACE {\n  void provideBuiltinPlugins() {\n")
-  foreach(NCPlugin_NAME ${NCrystal_builtin_plugin_names})
-    file(APPEND ${ncplugcc} "    Plugins::loadBuiltinPlugin(\"${NCPlugin_NAME}\",NCrystalPlugin_${NCPlugin_NAME}::registerPlugin);\n")
-  endforeach()
-  file(APPEND ${ncplugcc} "  }\n")
-  file(APPEND ${ncplugcc} "}\n")
-  configure_file("${ncplugcc}" "${PROJECT_BINARY_DIR}/autogen_ncplugins.cc" COPYONLY)
-  target_sources(NCrystal PRIVATE "${PROJECT_BINARY_DIR}/autogen_ncplugins.cc")
-  message( STATUS "Generated autogen_ncplugins.cc for enabling embedded plugins (will be compiled into the NCrystal library)." )
 endif()
 
 #NB: Important we do any configure_file AFTER all variables used have been set!
